# cross-domain-pipeline

./: .gitignore  README.md  README_ru.md  __init__.py  balance.py  build_presentation_tables.py  pyproject.toml  requirements.txt  runner.py  test.py
configs/: base.yaml  benchmark_grid.yaml  ecg_cross_database.yaml  mafaulda_cross_domain.yaml  mimii_due_fan_section00.yaml  mimii_due_fan_section00_smoke.yaml  paderborn_binary.yaml  paderborn_binary_repr.yaml  pamap2_cross_user.yaml  synthetic_fused_justification.yaml
cross_domain_pipeline/: __init__.py  api.py  cli.py  config.py  runner.py
docs/: claims_scope.md  mimii_due_protocol.md  model_selection.md  novelty_positioning.md
experiments/: data_profile_base.json
presentation_tables/: mimii_fused_sfda.csv  mimii_source_only.csv  paderborn_fused_sfda.csv  paderborn_source_only.csv  presentation_tables.md  synthetic_event_level.csv  synthetic_fused_sfda.csv  synthetic_source_only.csv
src/: adapt_source_free.py  build_ablation_summary.py  build_benchmark_summary.py  build_event_level_summary.py  build_experiment_summary.py  check_dataset.py  check_models.py  check_preprocessing.py  check_transforms.py  day5_evaluate.py  evaluate_event_level.py  evaluate_source_only.py  prepare_data.py  prepare_dummy_data.py  prepare_dummy_records.py  prepare_mimii_due.py  run_benchmark.py  train.py  train_source_only.py  window_sweep.py
tests/: test_classical_baseline.py  test_execute_plan.py  test_model_selection.py  test_preprocessing.py
tools/: build_paderborn_records_full.py  convert_one_paderborn_mat.py  (+2 more)
(+412 files in other folders)
