[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-domain-pipeline"
version = "0.1.0"
description = "Benchmark pipeline for cross-domain anomaly recognition in nonstationary signals"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*", "cross_domain_pipeline*"]